<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.album.photos.photos.PhotoDisplay">

    <Button
        android:id="@+id/button5"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:onClick="next"
        android:text="@string/next"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_addPerson" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:onClick="previous"
        android:text="@string/previous"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_addPerson"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:onClick="addTag"
        android:text="@string/addPerson"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_deleteTag" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="392dp"
        android:layout_height="333dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <Button
        android:id="@+id/button_addLocation"
        android:layout_width="82dp"
        android:layout_height="50dp"
        android:onClick="addTag"
        android:text="@string/addLocation"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_previous" />

    <Button
        android:id="@+id/button_deleteTag"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:onClick="deleteTag"
        android:text="@string/deleteTag"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_addLocation" />

    <ListView
        android:id="@+id/tagLV"
        android:layout_width="387dp"
        android:layout_height="125dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </ListView>

</android.support.constraint.ConstraintLayout>