<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.album.photos.photos.Home">

    <Button
        android:id="@+id/button_search"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_rename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_rename" />

    <ListView
        android:id="@+id/listViewAlbums"
        android:layout_width="352dp"
        android:layout_height="417dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:onClick="openAlbum"
        android:text="@string/button_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_create"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewAlbums" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="createAlbum"
        android:text="@string/button_create"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_open"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_open" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="deleteAlbum"
        android:text="@string/button_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_create"
        app:layout_constraintEnd_toStartOf="@+id/button_rename"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_create" />

    <Button
        android:id="@+id/button_rename"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="renameAlbum"
        android:text="@string/button_rename"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_search"
        app:layout_constraintStart_toEndOf="@+id/button_delete" />
</android.support.constraint.ConstraintLayout>
