<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.album.photos.photos.DisplayAlbum">

    <Button
        android:id="@+id/moveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="movePhoto"
        android:text="Move"
        app:layout_constraintBaseline_toBaselineOf="@id/addButton"
        app:layout_constraintStart_toEndOf="@id/viewPhoto" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="368dp"
        android:layout_height="429dp"
        android:layout_marginTop="8dp"
        android:choiceMode="singleChoice"
        android:clickable="false"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:onClick="addPhoto"
        android:text="@string/addPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="deletePhoto"
        android:text="@string/deletePhoto"
        app:layout_constraintBaseline_toBaselineOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/addButton" />

    <Button
        android:id="@+id/viewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="viewPhoto"
        android:text="@string/viewPhoto"
        app:layout_constraintBaseline_toBaselineOf="@+id/deleteButton"
        app:layout_constraintStart_toEndOf="@id/deleteButton" />
</android.support.constraint.ConstraintLayout>
